<resources>
    <string name="gf_app_name">Google Feedback</string>
    <string name="gf_back">Back</string>
    <string name="gf_feedback">Feedback</string>
    <string name="gf_user_account">User Account</string>
    <string name="gf_anonymous">Anonymous</string>
    <string name="gf_choose_an_account">Choose an account</string>
    <string name="gf_report_feedback">Report An Issue</string>
    <string name="gf_screenshot_preview">Screenshot Preview</string>
    <string name="gf_preview">Preview</string>
    <string name="gf_send">Send</string>
    <string name="gf_preview_feedback">Preview feedback</string>
    <string name="gf_no_data">No data</string>
    <string name="gf_privacy">Privacy</string>
    <string name="gf_include_system_data">Include system data</string>
    <string name="gf_include_screenshot">Include screenshot</string>
    <string name="gf_this_will_help">Share system data with Google, to better diagnose the problem.</string>
    <string name="gf_this_will_help_screenshot">Send screenshot of the last page you were on.</string>
    <string name="gf_unknown_app">Unknown application</string>
    <string name="gf_report_being_sent">Thanks, your report is being sent.</string>
    <string name="gf_report_sent_failure">Sorry, there was an error sending your report.</string>
    <string name="gf_report_queued">Your device seems to be offline. We will retry when you are connected.</string>
    <string name="gf_optional_description">Description (optional)</string>
    <string name="gf_system_log">System Log</string>
    <string name="gf_sys_logs">System Logs</string>
    <string name="gf_privacy_policy">Privacy Policy</string>
    <string name="gf_privacy_text">By selecting [Send] you acknowledge and agree that any information contained in the feedback report will be used by Google in accordance with the Google privacy policies applicable to the application through which you initiated the report. You agree that Google may use any feedback that you provide to improve any Google products or services.</string>
    <string name="gf_build_view">Build Data</string>
    <string name="gf_network_data">Network</string>
    <string name="gf_network_name">Network Name</string>
    <string name="gf_error_report_system">System</string>
    <string name="gf_error_report_package_version">Package version</string>
    <string name="gf_error_report_package_version_name">Package version name</string>
    <string name="gf_error_report_package_name">Package name</string>
    <string name="gf_error_report_installer_package_name">Installed by</string>
    <string name="gf_error_report_process_name">Process name</string>
    <string name="gf_error_report_time">Time</string>
    <string name="gf_error_report_description">Description</string>
    <string name="gf_error_report_device">Device</string>
    <string name="gf_error_report_build_id">Build id</string>
    <string name="gf_error_report_build_type">Build type</string>
    <string name="gf_error_report_model">Model</string>
    <string name="gf_error_report_product">Product</string>
    <string name="gf_error_report_sdk_version">SDK version</string>
    <string name="gf_error_report_release">Release</string>
    <string name="gf_error_report_incremental">Incremental version</string>
    <string name="gf_error_report_codename">Codename</string>
    <string name="gf_error_report_board">Board</string>
    <string name="gf_error_report_brand">Brand</string>
    <string name="gf_error_report_user_accounts">Number of Google accounts</string>
    <string name="gf_error_report_installed_packages">Installed applications</string>
    <string name="gf_error_report_running_apps">Running applications</string>
    <string name="gf_error_report_system_log">System log</string>
    <string name="gf_error_report_system_app">System app</string>
    <string name="gf_error_report_running_service_details">Details</string>
    <string name="gf_should_submit_on_empty_description">You have not entered an issue description. Are you sure you want to send feedback without a description?</string>
    <string name="gf_should_submit_anonymously">You are submitting feedback anonymously. Your email address may help us debug your reported issue better. Are you sure you want to continue?</string>
    <string name="gf_yes">Yes</string>
    <string name="gf_no">No</string>
    <string name="gf_crash_header">Crash Data</string>
    <string name="gf_stack_trace">Stack Trace</string>
    <string name="gf_exception_class_name">Exception Class Name</string>
    <string name="gf_throw_file_name">Throw File Name</string>
    <string name="gf_throw_line_number">Throw Line Number</string>
    <string name="gf_throw_class_name">Throw Class Name</string>
    <string name="gf_throw_method_name">Throw Method Name</string>
    <string name="gf_exception_message">Exception Message</string>
    <string name="gf_receiver_transport_scheme">https</string>
    <string name="gf_receiver_host">www.google.com</string>
    <string name="gf_receiver_port" />
    <string name="gf_receiver_path">/tools/feedback/android/__submit</string>
    <string name="previous_version_key">previous_version_key</string>
    <string name="camera_static_image_key">camera_static_image</string>
    <string name="camera_image_sequence_dir_key">camera_image_sequence_dir</string>
    <string name="user_wants_history_key">user_wants_histroy_key</string>
    <string name="save_to_sd_card_key">save_to_sd_card_key</string>
    <string name="frontend_domain_key">frontend_domain</string>
    <string name="custom_frontend_domain_key">custom_frontend_domain</string>
    <string name="user_agent_key">user_agent_key</string>
    <string name="network_indicator_in_continuous_key">network_indicator_in_continuous</string>
    <string name="background_goggle_key">background_goggle</string>
    <string name="background_goggle_mobile_connection_key">background_goggle_mobile_connection</string>
    <string name="background_goggle_roaming_key">background_goggle_roaming</string>
    <string name="history_user_key">history_user_key</string>
    <string name="auth_state_dirty_timestamp">auth_state_dirty_timestamp</string>
    <string name="installation_id_key">installation_id_key</string>
    <string name="speak">Speak</string>
    <string name="listening">Listening…</string>
    <string name="analyzing">Analyzing…</string>
    <string name="no_speech_recognized">No speech recognized.</string>
    <string name="barcode_thumbnail_path">/goggles/embedded/images/barcode.png</string>
    <string name="prod_cookie_url">http://www.google.com/</string>
    <string name="web_user_agent">Mozilla/5.0 (Linux; U; Android %s) AppleWebKit/528.5+ (KHTML, like Gecko) Version/3.1.2 Mobile Safari/525.20.1</string>
    <string name="wifi_only_option_value">wifi_only</string>
    <string name="wifi_and_mobile_networks_option_value">wifi_and_mobile_networks</string>
    <string name="unveil_content_provider_authority">com.google.android.apps.unveil</string>
    <string name="suggestion_provider_authority">com.google.android.apps.unveil.history.SuggestionProvider</string>
    <string name="abs__action_bar_home_description">Navigate home</string>
    <string name="abs__action_bar_up_description">Navigate up</string>
    <string name="abs__action_menu_overflow_description">More options</string>
    <string name="abs__action_mode_done">Done</string>
    <string name="abs__activity_chooser_view_see_all">See all...</string>
    <string name="abs__activity_chooser_view_dialog_title_default">Select activity</string>
    <string name="abs__share_action_provider_share_with">Share with...</string>
    <string name="abs__activitychooserview_choose_application">Choose an application</string>
    <string name="abs__shareactionprovider_share_with">Share with</string>
    <string name="abs__shareactionprovider_share_with_application">Share with %s</string>
    <string name="continuous_tts_settings_key">continuous_tts_settings_key</string>
    <string name="background_goggle_detailed_settings_placeholder_key" />
    <string name="debug_group_key">debug_group_key</string>
    <string name="launch_activity_key">launch_activity</string>
    <string name="mock_latitude_key">mock_latitude</string>
    <string name="mock_longitude_key">mock_longitude</string>
    <string name="glPreview_key">glPreview</string>
    <string name="use_local_barcode_key">use_local_barcode</string>
    <string name="use_ipv4__key">use_ipv4</string>
    <string name="use_devel_package_key">use_devel_package</string>
    <string name="camera_proxy_key">camera_proxy</string>
    <string name="preview_frame_key">preview_frame</string>
    <string name="use_groundtruth_key">use_groundtruth</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="goggles_overview">Find out more about the world around you by using images.</string>
    <string name="learn_more">Learn more »</string>
    <string name="try_it_now_underline"><u>Try it now »</u></string>
    <string name="set_it_up_underline"><u>Set it up »</u></string>
    <string name="goggles_works_well_with">Goggles works well with</string>
    <string name="goggles_doesnt_work_well_with">"Goggles doesn't work well with"</string>
    <string name="try_puggle_header">Browse Visually Similar Objects</string>
    <string name="try_puggle">"When Goggles doesn't get an exact match in snapshot mode, you can browse categories of visually similar images, such as clothing."</string>
    <string name="try_translation_header">Use Goggles to translate text</string>
    <string name="try_translation">Take a picture to translate text to different languages using snapshot mode.</string>
    <string name="try_search_from_camera_header">Search from Camera</string>
    <string name="try_search_from_camera">Get Goggles results for pictures you take with the Camera app.</string>
    <string name="more_tips_and_tricks">More Tips &amp; Tricks »</string>
    <string name="history_preference_title">Search History</string>
    <string name="save_to_sd_card_preference_title">Save Images to Gallery</string>
    <string name="save_to_sd_card_preference_summary">"Whether to automatically save Goggles query images to the SD card. Images will be viewable in the Camera application's gallery."</string>
    <string name="next">Next</string>
    <string name="animals">Animals</string>
    <string name="furniture">Furniture</string>
    <string name="books_and_dvds">Books &amp; DVDs</string>
    <string name="landmarks">Landmarks</string>
    <string name="logos">Logos</string>
    <string name="contact_info">Contact Info</string>
    <string name="artwork">Artwork</string>
    <string name="businesses">Businesses</string>
    <string name="products">Products</string>
    <string name="barcodes">Barcodes</string>
    <string name="text">Text</string>
    <string name="add_a_note">Add a note</string>
    <string name="save">Save</string>
    <string name="background_goggle_detailed_settings_title">Search from Camera</string>
    <string name="continuous_tts_settings_title">Enable Text-To-Speech</string>
    <string name="continuous_tts_settings_summary">If spoken Accessibility is enabled in Android, Goggles will read out the results it finds in Continuous Mode.</string>
    <string name="goggles_settings_screen_title">Goggles Settings</string>
    <string name="search_from_camera_title">Search from Camera</string>
    <string name="search_from_camera_warning">Uploading over a mobile network will use your data connection and may cost you money. Turn this off at any time in Settings.</string>
    <string name="search_from_camera_radio_group_title">Choose when pictures will be uploaded</string>
    <string name="over_wifi_or_mobile_network">Over Wi-Fi or mobile network</string>
    <string name="over_wifi_only">Over Wi-Fi only</string>
    <string name="default_frontend_domain">www.google.com</string>
</resources>