<?xml version="1.0" encoding="utf-8"?>
<LinearLayout style="@style/promoContainer"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:text="@string/goggles_works_well_with" style="@style/promoSubHeader" />
    <LinearLayout style="@style/promoPictureRow">
        <LinearLayout style="@style/promoImageLayout">
            <ImageView android:src="@drawable/products" style="@style/promoImage" />
            <TextView android:text="@string/products" style="@style/promoImageLabel" />
        </LinearLayout>
        <LinearLayout style="@style/promoImageLayout">
            <ImageView android:src="@drawable/barcodes" style="@style/promoImage" />
            <TextView android:text="@string/barcodes" style="@style/promoImageLabel" />
        </LinearLayout>
        <LinearLayout style="@style/promoImageLayout">
            <ImageView android:src="@drawable/text" style="@style/promoImage" />
            <TextView android:text="@string/text" style="@style/promoImageLabel" />
        </LinearLayout>
    </LinearLayout>
    <TextView android:text="@string/more_tips_and_tricks" style="@style/promoCallToAction" />
</LinearLayout>
