<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:background="@color/white_smoke" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="#ff000000" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/try_search_from_camera">
                    <requestFocus />
                </TextView>
                <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/learn_more" android:focusable="true" android:nextFocusDown="@id/checkbox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/learn_more" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="18.0sp" android:textColor="@drawable/text_color" android:id="@id/search_from_camera_label" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/search_from_camera_title" android:singleLine="true" android:layout_weight="1.0" />
                <CheckBox android:id="@id/checkbox" android:nextFocusDown="@id/radio_group_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@string/search_from_camera_title" />
            </LinearLayout>
            <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="16.0sp" android:textColor="@drawable/text_color" android:layout_gravity="left" android:id="@id/radio_group_title" android:padding="8.0dip" android:focusable="true" android:nextFocusUp="@id/checkbox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/search_from_camera_radio_group_title" />
                    <RadioGroup android:orientation="vertical" android:id="@id/radio_group" android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <RadioButton android:textSize="16.0sp" android:textColor="@drawable/text_color" android:id="@id/radio_wifi_mobile" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/over_wifi_or_mobile_network" />
                        <RadioButton android:textSize="16.0sp" android:textColor="@drawable/text_color" android:id="@id/radio_wifi_only" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/over_wifi_only" />
                    </RadioGroup>
                    <TextView android:textSize="12.0sp" android:textColor="@drawable/text_color" android:id="@id/warning" android:padding="8.0dip" android:focusable="true" android:layout_width="wrap_content" android:layout_height="0.0px" android:text="@string/search_from_camera_warning" android:layout_weight="1.0" />
                </LinearLayout>
                <View android:id="@id/radio_shade" android:background="#88ffffff" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" />
            </FrameLayout>
        </LinearLayout>
    </ScrollView>
    <View android:background="@color/borderless_button_divider" android:paddingTop="2.0dip" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <LinearLayout android:gravity="right" android:background="@drawable/dark_background" android:layout_width="fill_parent" android:layout_height="wrap_content" android:weightSum="2.0">
        <View android:layout_gravity="center_vertical" android:background="@color/borderless_button_divider" android:layout_width="1.0dip" android:layout_height="fill_parent" />
        <Button android:id="@id/next" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/next" android:maxLines="1" android:layout_weight="1.0" style="@style/borderlessButton" />
    </LinearLayout>
</LinearLayout>
