<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/splash" android:layout_weight="1.0" />
    <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="#ff000000" android:paddingLeft="10.0dip" android:paddingTop="10.0dip" android:paddingRight="10.0dip" android:paddingBottom="2.0dip" android:focusable="true" android:nextFocusDown="@id/learn_more" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/goggles_overview">
        <requestFocus />
    </TextView>
    <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:layout_gravity="left" android:id="@id/learn_more" android:paddingLeft="10.0dip" android:paddingTop="2.0dip" android:paddingBottom="10.0dip" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/learn_more" />
    <View android:background="@color/borderless_button_divider" android:paddingTop="2.0dip" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <LinearLayout android:gravity="right" android:background="@drawable/dark_background" android:layout_width="fill_parent" android:layout_height="wrap_content" android:weightSum="2.0">
        <View android:layout_gravity="center_vertical" android:background="@color/borderless_button_divider" android:layout_width="1.0dip" android:layout_height="fill_parent" />
        <Button android:id="@id/lets_start" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/next" android:maxLines="1" android:layout_weight="1.0" style="@style/borderlessButton" />
    </LinearLayout>
</LinearLayout>
