<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#ff000000" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <FrameLayout android:layout_gravity="top|left|center" android:background="#ff999999" android:padding="1.0px" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="2.0dip">
            <ImageButton android:layout_gravity="top|left|center" android:id="@id/thumbnail" android:background="#ff000000" android:layout_width="100.0dip" android:layout_height="100.0dip" android:scaleType="fitCenter" />
        </FrameLayout>
        <TextView android:textSize="22.0sp" android:layout_gravity="top|center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="4.0dip" android:text="@string/add_a_note" />
    </LinearLayout>
    <EditText android:gravity="top" android:id="@id/note_text" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" android:inputType="textCapSentences" />
    <View android:background="@color/borderless_button_divider" android:paddingTop="4.0dip" android:paddingBottom="0.0dip" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <LinearLayout android:paddingBottom="1.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/cancel_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cancel" android:layout_weight="1.0" style="@style/borderlessButton" />
        <View android:layout_gravity="center_vertical" android:background="@color/borderless_button_divider" android:layout_width="1.0dip" android:layout_height="fill_parent" />
        <Button android:id="@id/save_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/save" android:layout_weight="1.0" style="@style/borderlessButton" />
    </LinearLayout>
</LinearLayout>
